# formula-widget

./: .gitignore  .gitmodules  PLAN_CURSOR.md  PLAN_POINTS_2_3.md  PLAN_TESTING.md
formula_widget/: CMakeLists.txt  test_layout.cpp
formula_widget/src/: formula_cursor.cpp  formula_cursor.hpp  formula_widget.cpp  formula_widget.hpp  ft_font_face.cpp  ft_font_face.hpp  ft_library.cpp  ft_library.hpp  main.cpp
formula_widget/tests/: CMakeLists.txt  formula_widget_test.cpp  formula_widget_test.hpp  main.cpp  test_coordinate_conversion.cpp  test_cursor.cpp  test_navigation.cpp
mfl/: CMakeLists.txt  Makefile  cmake_install.cmake
mfl/include/mfl/: abstract_font_face.hpp  layout.hpp
mfl/src/: cmake_install.cmake  layout.cpp
mfl/src/noad/: accent.cpp  fraction.cpp  gen_script.cpp  left_right.cpp  math_char.cpp  matrix.cpp  overline.cpp  radical.cpp  underline.cpp
mfl/src/node/: box.hpp  hlist.cpp  vlist.cpp
mfl/src/parser/: font_group.cpp  math_space.cpp  parser_utilities.cpp  unicode_index.cpp
mfl/src/parser/symbols/: greek_alphabet.hpp
mfl/tests/approval_tests/: cmake_install.cmake  docs.cpp
mfl/tests/approval_tests/approval_tests_autogen/: deps  moc_predefs.h
mfl/tests/fonts_for_tests/: CMakeLists.txt  Makefile
mfl/tests/fonts_for_tests/include/fonts_for_tests/: font_face.hpp
mfl/tests/fonts_for_tests/src/: font_face.cpp
mfl/tests/unit_tests/: Makefile  cmake_install.cmake  layout.cpp
mfl/tests/unit_tests/framework/: mock_font_face.hpp
mfl/tests/unit_tests/unit_tests_autogen/: moc_predefs.h
